# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
books/: models.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
bookshelf/: settings.py  urls.py
