[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["renadalkhlafat <renadsalem8888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
django-cors-headers = "^3.10.0"
psycopg2-binary = "^2.9.2"
djangorestframework-simplejwt = "^5.0.0"
httpie = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
